# sifli-rs

./: .gitignore
.github/workflows/: build-hal.yml
contrib/nix/: flake.nix
examples/sf32lb52x/: Cargo.toml  memory.x
examples/sf32lb52x/.cargo/: config.toml  flash_and_debug.sh
examples/sf32lb52x/src/: lcpu_image_52x.rs  patch_data.rs  patch_data_rev_b.rs
scripts/: extract_lcpu_bins.py
sifli-hal/: Cargo.toml  README.md  README_zh.md  build.rs  build_serde.rs
sifli-hal/data/sf32lb52x/: LPSYS_RCC.yaml  clocks.yaml  dma.yaml  mailbox.yaml  peripherals.yaml  pinmux_signals.yaml
sifli-hal/src/: adc.rs  bt_hci.rs  efuse.rs  fmt.rs  hpaon.rs  i2c.rs  lcdc.rs  lcpu.rs  lcpu_img.rs  lcpu_ram.rs  lib.rs  lpaon.rs  macros.rs  mailbox.rs  mpu.rs  patch.rs  rng.rs  syscfg.rs  time.rs  utils.rs
sifli-hal/src/dma/: dma.rs  mod.rs
sifli-hal/src/efuse/: bank1.rs  mod.rs  tests.rs
sifli-hal/src/ipc/: circular_buf.rs  mod.rs
sifli-hal/src/lcpu/: bt_cal.rs  config.rs  controller.rs  memory_map.rs  mod.rs  nvds.rs  ram.rs
sifli-hal/src/lcpu/bt_rf_cal/: edr_lo.rs  mod.rs  opt.rs  rfc_cmd.rs  rfc_tables.rs  txdc.rs  txdc_hw.rs  vco.rs
sifli-hal/src/lpsys_rcc/: clock.rs  clock_configure.rs  mod.rs
sifli-hal/src/pmu/: dvfs.rs
sifli-hal/src/rcc/: clock.rs  clock_config.rs  clock_lpsys.rs  clock_read.rs  mod.rs  token.rs
sifli-hal/src/timer/: low_level.rs  mod.rs  simple_pwm.rs
sifli-hal/src/usart/: buffered.rs  mod.rs
