[package]
name = "sifli-hal-examples-sf32lb52x"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
sifli-hal = { version = "0.1.1", path = "../../sifli-hal", features = ["sf32lb52x", "sf32lb52x-lcpu", "defmt", "unstable-pac", "usb", "time-driver-gptim2"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = { version = "0.5" }
panic-probe = { version = "1", features = ["print-defmt"] }
# panic-halt = "*"

embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1.2"

embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }

defmt = "1"
defmt-rtt = "1"
heapless = "0.9"
embassy-usb = { version="0.5", features = ["defmt"] }
usbd-hid = { version="0.8", features = ["defmt"] }
static_cell = "2.1.1"
portable-atomic = "1.11.1"
